# modchain

./: .gitignore  HANDOFF.md  IPFS-STORAGE.md  OLLAMA-CONTINUE.md  README.md  docker-compose.yml  install-server.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docker/: Dockerfile.node-agent  Dockerfile.orchestrator
docs/: PROJECT_OVERVIEW.md
docs/handoffs/: 2026-01-04-rhizos-cloud.md  HANDOFF_001_2026-01-04_project-init.md  HANDOFF_002_2026-01-04_core-scaffold.md  HANDOFF_003_2026-01-04_full-stack.md  HANDOFF_004_2026-01-04_mvp-complete.md  HANDOFF_005_2026-01-04_desktop-app.md  flow-builder-production.md
nginx/: nginx.conf
src/cli/: package.json
src/cli/src/: index.ts
src/dashboard/: index.html  package.json  vite.config.ts
src/dashboard/src/: App.tsx  index.css
src/desktop/: index.html  package.json  vite.config.ts
src/desktop/src/: App.tsx  main.tsx
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/src/: main.rs
src/desktop/src/components/: CyberButton.tsx  GlitchText.tsx  JobList.tsx  NodeList.tsx  StatsCard.tsx  index.ts
src/mcp-adapters/: package.json  pnpm-lock.yaml
src/mcp-adapters/src/: index.ts
src/node-agent/: Cargo.toml
src/node-agent/src/: config.rs  executor.rs  hardware.rs  main.rs  orchestrator.rs
src/node-electron/: package.json  test-node.js
src/node-electron/src/: index.html  main.ts  node-service.ts  preload.ts
src/orchestrator/: package.json  pnpm-lock.yaml
src/orchestrator/src/: index.ts  mock-node.ts
src/shared/schemas/: capability.ts  flows.ts  module-configs.ts
(+38 files in other folders)
